提交分页功能

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,6 +4,7 @@ runmode = dev
 sessionon = true
 sessionname = MSID
 sessionprovider = "redis"
+sessiongcmaxlifetime = 86400
 copyrequestbody = true
 GlobalUserSalt = 'abc'
 db = mysql
