--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,5 +1,5 @@
 appname = Mustang
-httpport = 8080
+httpport = 8081
 runmode = dev
 sessionon = true
 sessionname = MSID
@@ -16,6 +16,7 @@ db_user = root
 db_password = 123456
 db_name = mustang
 sessionproviderconfig = "127.0.0.1:6379"
+registry = "registry.x.com"
 
 [pro]
 db_host = 192.168.1.1
@@ -23,3 +24,4 @@ db_port = 3306
 db_user = root
 db_password = Assadsdasweq
 db_name = mustang
+sessionproviderconfig = "127.0.0.1:6379"
